apps/arr/00-arr.yaml
---
## Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: arr
  labels:
    name: arr
---
# Qbittorrent
---
## Service for exposing Qbittorrent
apiVersion: v1
kind: Service
metadata:
  namespace: arr
  name: qbittorrent
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 8112
    - name: a
      port: 11010
      protocol: TCP
    - name: b
      port: 11011
      protocol: TCP
    - name: c
      port: 11012
      protocol: TCP
    - name: d
      port: 11013
      protocol: TCP
    - name: e
      port: 11014
      protocol: TCP
    - name: f
      port: 11015
      protocol: TCP
    - name: a1
      port: 11010
      protocol: UDP
    - name: b1
      port: 11011
      protocol: UDP
    - name: c1
      port: 11012
      protocol: UDP
    - name: d1
      port: 11013
      protocol: UDP
    - name: e1
      port: 11014
      protocol: UDP
    - name: f1
      port: 11015
      protocol: UDP
  selector:
    app: qbittorrent
---
## Deployment for Sonarr
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arr
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      volumes:
        - name: qbittorrent-config
          hostPath:
            path: "/mnt/sdb1/homelab/config/qbittorrent"
        - name: media-data
          hostPath:
            path: "/mnt/sdb1/data"
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:14.3.9.99202110311443-7435-01519b5e7ubuntu20.04.1-ls166
          volumeMounts:
            - mountPath: "/config"
              name: qbittorrent-config
            - mountPath: "/app/data"
              name: media-data
          ports:
            - name: web
              containerPort: 8112
            - containerPort: 11010
              protocol: TCP
            - containerPort: 11011
              protocol: TCP
            - containerPort: 11012
              protocol: TCP
            - containerPort: 11013
              protocol: TCP
            - containerPort: 11014
              protocol: TCP
            - containerPort: 11015
              protocol: TCP
            - containerPort: 11010
              protocol: UDP
            - containerPort: 11011
              protocol: UDP
            - containerPort: 11012
              protocol: UDP
            - containerPort: 11013
              protocol: UDP
            - containerPort: 11014
              protocol: UDP
            - containerPort: 11015
              protocol: UDP
---
# Prowlarr
---
## Service for exposing Prowlarr
apiVersion: v1
kind: Service
metadata:
  namespace: arr
  name: prowlarr
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 9696
  selector:
    app: prowlarr
---
## Deployment for Prowlarr
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arr
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      volumes:
        - name: prowlarr-config
          hostPath:
            path: "/mnt/sdb1/homelab/config/prowlarr"
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:develop
          volumeMounts:
            - mountPath: "/config"
              name: prowlarr-config
          ports:
            - name: web
              containerPort: 9696
---
# Sonarr
---
## Service for exposing Sonarr
apiVersion: v1
kind: Service
metadata:
  namespace: arr
  name: sonarr
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 8989
  selector:
    app: sonarr
---
## Deployment for Sonarr
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arr
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
        - name: sonarr-config
          hostPath:
            path: "/mnt/sdb1/homelab/config/sonarr"
        - name: media-data
          hostPath:
            path: "/mnt/sdb1/data"
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr
          volumeMounts:
            - mountPath: "/config"
              name: sonarr-config
            - mountPath: "/app/data"
              name: media-data
          ports:
            - name: web
              containerPort: 8989
---
# Radarr
---
## Service for exposing Radarr
apiVersion: v1
kind: Service
metadata:
  namespace: arr
  name: radarr
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 7878
  selector:
    app: radarr
---
## Deployment for Radarr
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arr
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
        - name: radarr-config
          hostPath:
            path: "/mnt/sdb1/homelab/config/radarr"
        - name: media-data
          hostPath:
            path: "/mnt/sdb1/data"
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr
          volumeMounts:
            - mountPath: "/config"
              name: radarr-config
            - mountPath: "/app/data"
              name: media-data
          ports:
            - name: web
              containerPort: 7878
---
# Lidarr
---
## Service for exposing Lidarr
apiVersion: v1
kind: Service
metadata:
  namespace: arr
  name: lidarr
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 8686
  selector:
    app: lidarr
---
## Deployment for Lidarr
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: arr
  name: lidarr
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      volumes:
        - name: lidarr-config
          hostPath:
            path: "/mnt/sdb1/homelab/config/lidarr"
        - name: media-data
          hostPath:
            path: "/mnt/sdb1/data"
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr
          volumeMounts:
            - mountPath: "/config"
              name: lidarr-config
            - mountPath: "/app/data"
              name: media-data
          ports:
            - name: web
              containerPort: 8686
---
## IngressRoute
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-arr
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`torrent.stonegarden.dev`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8112
    - match: Host(`prowlarr.stonegarden.dev`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
    - match: Host(`sonarr.stonegarden.dev`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
    - match: Host(`radarr.stonegarden.dev`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
    - match: Host(`lidarr.stonegarden.dev`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
  tls:
    certResolver: letsencrypt
